force-app/main/default/objects/Contact/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <label>Anniversary</label>
    <type>Date</type>
</CustomField>