force-app/main/default/objects/Contact/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Enter the type of Contact!</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relationship_to_Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Referrer Customer (Brand Ambassador)</fullName>
            </value>
            <value>
                <fullName>Defaulter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>