force-app/main/default/objects/Contact/fields/Category_Grading__c.field-meta.xml
<CustomField>
    <fullName>Category_Grading__c</fullName>
    <formula>IF( ISPICKVAL( Category__c , &quot;Referrer Customer (Brand Ambassador)&quot;) , &quot;A&quot;,  IF( ISPICKVAL( Category__c , &quot;Customer&quot;) , &quot;B&quot;,  IF( ISPICKVAL( Category__c , &quot;Defaulter&quot;) ,&quot;D&quot;,&quot;N&quot;) ) )</formula>
    <inlineHelpText>Grades the Contact based on their Category</inlineHelpText>
    <label>Category Grading</label>
    <type>Text</type>
</CustomField>