force-app/main/default/objects/Contact/fields/Face_Time_ID__c.field-meta.xml
<CustomField>
    <fullName>Face_Time_ID__c</fullName>
    <label>Face Time ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>