force-app/main/default/objects/Contact/fields/Facebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_ID__c</fullName>
    <label>Facebook ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>