force-app/main/default/objects/Contact/fields/Geo_location__c.field-meta.xml
<CustomField>
    <fullName>Geo_location__c</fullName>
    <label>Geo location</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>