force-app/main/default/objects/Contact/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>Purchase_Choice_Grading__c &amp; Category_Grading__c</formula>
    <inlineHelpText>Grade Based on Purchase Choice and Category of Contact</inlineHelpText>
    <label>Grade</label>
    <type>Text</type>
</CustomField>