force-app/main/default/objects/Contact/fields/Life_Event_2__c.field-meta.xml
<CustomField>
    <fullName>Life_Event_2__c</fullName>
    <label>Life Event 2 (if any)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Life_Event</valueSetName>
    </valueSet>
</CustomField>