force-app/main/default/objects/Contact/fields/Life_Event_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Life_Event_2_Date__c</fullName>
    <label>Life Event 2 Date</label>
    <type>Date</type>
</CustomField>