force-app/main/default/objects/Contact/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <inlineHelpText>Fill in if Any other Life Event</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>