force-app/main/default/objects/Contact/fields/Pinterest_ID__c.field-meta.xml
<CustomField>
    <fullName>Pinterest_ID__c</fullName>
    <label>Pinterest ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>