force-app/main/default/objects/Contact/fields/Purchase_Choice__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Choice__c</fullName>
    <label>Purchase Choice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relationship_to_Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VB</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>