force-app/main/default/objects/Contact/fields/Purchase_Choice_Grading__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Choice_Grading__c</fullName>
    <formula>IF( ISPICKVAL( Purchase_Choice__c , &quot;VB&quot;) ,&quot;A&quot;, IF( ISPICKVAL( Purchase_Choice__c , &quot;B&quot;) , &quot;B&quot;, IF( ISPICKVAL( Purchase_Choice__c , &quot;N&quot;) , &quot;C&quot;, &quot;N&quot;) ) )</formula>
    <inlineHelpText>Grades the Contact based on their Purchase Choice</inlineHelpText>
    <label>Purchase Choice Grading</label>
    <type>Text</type>
</CustomField>