force-app/main/default/objects/Contact/fields/Relationship_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Company__c</fullName>
    <label>Relationship to Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_to_Company</valueSetName>
    </valueSet>
</CustomField>