force-app/main/default/objects/Contact/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <inlineHelpText>Select the Relationship of the Contact with the Account</inlineHelpText>
    <label>Relationship To Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Daughter-in-law</fullName>
            </value>
            <value>
                <fullName>Mother-in-law</fullName>
            </value>
            <value>
                <fullName>Sister-in-law</fullName>
            </value>
            <value>
                <fullName>Father-in-law</fullName>
            </value>
            <value>
                <fullName>Brother-in-law</fullName>
            </value>
            <value>
                <fullName>Son-in-law</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>