force-app/main/default/objects/Contact/fields/Twitter_ID__c.field-meta.xml
<CustomField>
    <fullName>Twitter_ID__c</fullName>
    <label>Twitter ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>