force-app/main/default/objects/Contact/fields/WhatsApp_Number_if_other_than_Mobile__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number_if_other_than_Mobile__c</fullName>
    <inlineHelpText>Enter the WhatsApp Number of the Contact, if it is other than the Mobile Number
Enter the Number with Country Code</inlineHelpText>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>