force-app/main/default/objects/Contact/validationRules/Country_Code_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Code_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( MobilePhone )), NOT( CONTAINS(  MobilePhone ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Enter the Number in +xx-------- format</errorMessage>
</ValidationRule>