force-app/main/default/objects/Contact/validationRules/Country_Code_Check_Other_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Code_Check_Other_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  OtherPhone  )), NOT( CONTAINS(   OtherPhone  ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter the Number in +xx-------- format</errorMessage>
</ValidationRule>