force-app/main/default/objects/Contact/validationRules/Customer_Analysis_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Analysis_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Relationship_to_Company__c , &quot;Customer&quot;) , OR( ISBLANK( TEXT( Category__c ) ),ISBLANK( TEXT(  Purchase_Choice__c  ) ) ))</errorConditionFormula>
    <errorDisplayField>Category__c</errorDisplayField>
    <errorMessage>Please fill in the Customer Analysis Section</errorMessage>
</ValidationRule>