force-app/main/default/objects/Contact/validationRules/Ethnicity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Ethnicity_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISPICKVAL( Religion__c , &quot;Hindu&quot;) ) ,NOT( ISPICKVAL(  Ethnicity__c  , &quot;N/A&quot;) ))</errorConditionFormula>
    <errorDisplayField>Ethnicity__c</errorDisplayField>
    <errorMessage>The Ethnicity to be N/A</errorMessage>
</ValidationRule>