force-app/main/default/objects/Contact/validationRules/Life_Event2_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Life_Event2_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( TEXT(  Life_Event_2_Date__c  ) ) ,NOT( ISBLANK( TEXT(  Life_Event_2__c  ) ) ))</errorConditionFormula>
    <errorDisplayField>Life_Event_2__c</errorDisplayField>
    <errorMessage>Please check the Life Event details</errorMessage>
</ValidationRule>