force-app/main/default/objects/Contact/validationRules/Life_Event_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Life_Event_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( TEXT( Life_Event__c ) ) ) , ISBLANK( TEXT( Life_Event_Date__c ) ) )</errorConditionFormula>
    <errorDisplayField>Life_Event_Date__c</errorDisplayField>
    <errorMessage>Please fill in the missing Life Event Details</errorMessage>
</ValidationRule>