force-app/main/default/objects/Contact/validationRules/Other_Life_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Life_Event</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Life_Event__c , &quot;Other&quot;), ISPICKVAL(   Life_Event_2__c   , &quot;Other&quot;) ,ISPICKVAL(   Life_Event_3_if_any__c   , &quot;Other&quot;) ), ISBLANK( Other__c ) )</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Fill in the Other Life Event Details.</errorMessage>
</ValidationRule>