force-app/main/default/objects/Contact/validationRules/Phone_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Phone  )), NOT( CONTAINS(   Phone  ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter the Phone in +XX--------- Format</errorMessage>
</ValidationRule>