force-app/main/default/objects/Contact/validationRules/Referral_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Referral_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Contact_Source__c , &quot;Referral&quot;) , ISBLANK( Referral__c ) )</errorConditionFormula>
    <errorDisplayField>Referral__c</errorDisplayField>
    <errorMessage>Please fill in Referrer</errorMessage>
</ValidationRule>