force-app/main/default/objects/Contact/validationRules/WhatsApp_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>WhatsApp_Format_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  WhatsApp_Number_if_other_than_Mobile__c  )), NOT( CONTAINS(   WhatsApp_Number_if_other_than_Mobile__c  ,LEFT( &quot;+&quot; , 1) ) ) )</errorConditionFormula>
    <errorDisplayField>WhatsApp_Number_if_other_than_Mobile__c</errorDisplayField>
    <errorMessage>Enter WhatsApp Number in +XX----------- format</errorMessage>
</ValidationRule>